2.1.3
 - setup: bump dclab from 0.23.0 to 0.24.7 (equidistant isoelastics,
   faster polygon filtering, crosstalk correction failed due to
   improper configuration update)
 - fix: opening sessions did not work due to missing slot decorator
2.1.2
 - fix: ValueError when trying to compute contour spacing, because no
   datasets are selected for a plot
 - fix: coloring scatter plot by feature did not work when the feature
   contains nan values
 - fix: search path in session should not be filename but its
   directory
 - setup: bump dclab from 0.22.5 to 0.23.0 (possible HDF5 export issue)
2.1.1
 - fix: include private datasets when searching with DCOR API Key
 - fix: remove UI option to compute Young's modulus for reservoir data
   (new "emodulus enabled" key in pipeline slot)
 - fix: `Pipeline` object not returned by `session.open_session`
 - setup: bump dclab from 0.22.1 to 0.22.5 (improve contour retrieval
   for mask images with artefacts, disable computation of Young's
   modulus for reservoir measurements)
2.1.0
 - feat: basic DCOR support
 - fix: improved session support (older pre-release sessions)
 - docs: add DCOR guick guide 
 - enh: export event image via context menu in Quick View (#35)
 - setup: bump dclab from 0.21.1 to 0.22.1 (DCOR support)
2.0.3
 - setup: bump dclab from 0.20.3 to 0.21.1
 - docs: add terminology section (#12)
2.0.2
 - fix: IndexError when removing a plot (#36)
 - fix: ValueError when filtering all events in Quick View (#37)
 - fix: TypeError when removing datasets and opening Quick View (#38)
 - fix: RuntimeError when removing datasets and opening Quick View (#38)
 - fix: ValueError when removing activated datasets and opening Quick View
2.0.1
 - fix: correctly distinguish prereleases when checking for new versions
 - enh: allow loading data via drag&drop
2.0.0
 - initial release