@@ -1,8 +1,12 @@
 2.1.3
+ - fix: opening sessions did not work due to missing slot decorator
+ - fix: in some cases the temperature/viscosity setting was not
+   correctly written to the UI for individual slots when switching
+   between slots with fundamentally different settings (e.g. channel
+   and reservoir)
  - setup: bump dclab from 0.23.0 to 0.24.7 (equidistant isoelastics,
    faster polygon filtering, crosstalk correction failed due to
    improper configuration update)
- - fix: opening sessions did not work due to missing slot decorator
 2.1.2
  - fix: ValueError when trying to compute contour spacing, because no
    datasets are selected for a plot
